# simple-s3-cache

./: .dockerignore  .gitignore  DEVELOPMENT.md  DISTRIBUTED.md  Dockerfile  HAZARDS.md  PLAN.md  README.md  go.mod  go.sum  simple-s3-cache-gateway.example.yaml  simple-s3-cache.example.yaml
.github/workflows/: container.yml
charts/simple-s3-cache/: Chart.yaml  README.md  values.yaml
charts/simple-s3-cache/examples/: external-gateway-values.yaml  gateway-values.yaml  peer-values.yaml  single-values.yaml
charts/simple-s3-cache/templates/: NOTES.txt  _helpers.tpl  cache-headless-service.yaml  cache-service.yaml  cache-statefulset.yaml  gateway-configmap.yaml  gateway-deployment.yaml  (+7 more)
cmd/simple-s3-cache/: main.go
cmd/simple-s3-cache-gateway/: main.go
docs/ops-tests/: CORRECTNESS.md  FAILURE_SCENARIOS.md  PERFORMANCE.md  README.md
e2e/: .env.example  README.md  pyproject.toml  pyrightconfig.json
e2e/perf/: README.md  s3_read_bench.py
e2e/tests/: conftest.py  test_backend_smoke.py  test_peer_live_rustfs.py  test_proxy_contract.py  test_proxy_read_passthrough.py
internal/cache/: cache.go  cache_test.go
internal/cacheplan/: range.go  range_test.go
internal/config/: config.go  config_test.go
internal/gateway/: gateway.go  gateway_test.go
internal/metrics/: metrics.go  metrics_test.go
internal/ops/: state.go
internal/peer/: pageframe.go  pageframe_test.go  router.go  router_test.go
internal/proxy/: proxy.go  proxy_test.go
internal/s3request/: classify.go  classify_test.go  path.go  path_test.go
internal/server/: server.go  server_test.go
