[project]
name = "simple-s3-cache-e2e"
version = "0.1.0"
description = "Opt-in end-to-end tests for simple-s3-cache"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.34",
    "botocore>=1.34",
    "python-dotenv>=1.0",
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "e2e: tests that require real S3-compatible credentials",
]
